# agenticAI

./: .gitignore  assessment_1.ipynb  career_data.json  first.ipynb  pyproject.toml  python.ipynb  requirement.txt  test.ipynb  tools2.ipynb
