[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "groq>=0.37.1",
    "gtts>=2.5.4",
    "ipykernel>=7.2.0",
    "ipython>=9.14.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "matplotlib>=3.11.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tavily>=1.1.0",
    "typesense>=2.0.0",
]
